[package]
name = "ankikaji"
version = "0.1.0"
edition = "2024"

[dependencies]
autoruby = { git = "https://github.com/MyzTyn/autoruby.git" }
clap = { version = "4.5.43", features = ["derive"] }
csv = "1.3.1"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
sea-query = { version = "1.0.0-rc.1", features = ["derive"] }
sea-query-rusqlite = { version = "0.8.0-rc.8" }

[profile.release]
lto = true
panic = "abort"
opt-level = "z"
strip = true
